--- a/public/css/custom-styles.css
+++ b/public/css/custom-styles.css
@@ -21,3 +21,7 @@ body {
     -webkit-animation: spinner-border .75s linear infinite;
     animation: spinner-border .75s linear infinite;
 }
+
+.sql-textarea{
+    resize: none;
+}
